fix about on mobile

--- a/assets/sass/style/hero.sass
+++ b/assets/sass/style/hero.sass
@@ -1,15 +1,20 @@
 .hero
-    // Attacher le breadcrumb en bas du hero 
-    display: flex
-    flex-direction: column
-    justify-content: space-between
-    padding-bottom: 0
-    .breadcrumb
-        height: fit-content
-        padding-bottom: var(--grid-gutter) 
-        padding-top: var(--grid-gutter) 
+    @include media-breakpoint-up(desktop)
+        // Attacher le breadcrumb en bas du hero 
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        padding-bottom: 0
+        .breadcrumb
+            height: fit-content
+            padding-bottom: var(--grid-gutter) 
+            padding-top: var(--grid-gutter) 
     
     // Aligner les images en bas du hero 
     &--with-image
         .content
             align-items: flex-end
+
+    &--image-portrait, &--image-square 
+        .container
+            margin-bottom: 0
